--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "@types/debug": "^4.1.5",
     "@types/node": "^14.14.22",
     "@types/pretty": "^2.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
